--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ h1, h3{
 }
 #fight, #counter-death{
     text-align: center;
-    color: black;
+    color: #05ebf3;
     font-weight: bolder;
     font-size: 28px;
 }
